# feldfreund_devkit_ros

./: .gitignore  .syncignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker.sh  feldfreund_devkit_ros.code-workspace  pyproject copy.toml  pyproject.toml  requirements-dev.txt  requirements.txt  sync.py
.devcontainer/: devcontainer.json
.github/workflows/: colcon-test.yml  test.yml
basekit_driver/: package.xml
basekit_driver/basekit_driver/: basekit_driver_node.py
basekit_driver/basekit_driver/data/: data_odom.py
basekit_driver/basekit_driver/modules/: configuration_handler.py  esp_handler.py  odom_handler.py  twist_handler.py
basekit_launch/config/: basekit.liz  basekit.yaml
basekit_launch/launch/: axis_cameras.launch.py  basekit_nocams.launch.py
basekit_ui/: package.xml
basekit_ui/launch/: ui.launch.py
devkit_driver/: LICENSE  package.xml  setup.cfg  setup.py
devkit_driver/devkit_driver/: __init__.py  devkit_driver_node.py  qos.py
devkit_driver/devkit_driver/communication/: communication.py  serial_communication.py
devkit_driver/devkit_driver/data/: data_bms.py  data_odom.py
devkit_driver/devkit_driver/logger/: logger.py  ros_logger.py  stdout_logger.py
devkit_driver/devkit_driver/modules/: __init__.py  base.py  bms_handler.py  bumper_handler.py  configuration_handler.py  esp_handler.py  estop_handler.py  odom_handler.py  robot_brain_handler.py  twist_handler.py
devkit_launch/: CMakeLists.txt  package.xml
devkit_launch/config/: axis_camera.yaml  camera.yaml  devkit.liz  devkit.yaml  feldfreund.py  gnss.yaml  secrets.yaml.template
devkit_launch/launch/: axis_cameras.launch.py  camera_system.launch.py  devkit.launch.py  devkit_driver.launch.py  devkit_nocams.launch.py  devkit_simulation.launch.py  gnss.launch.py  launch_utils.py  ui.launch.py  usb_camera.launch.py
devkit_ui/: CMakeLists.txt  package.xml  setup.cfg  setup.py
devkit_ui/devkit_ui/: __init__.py  dashboard.py  node.py  ui_node.py
devkit_ui/launch/: ui.launch.py
devkit_ui/scripts/: ui_node.py
docker/: Dockerfile  bashrc  docker-compose.yml
docs/: circuit-diagram-pico.mermaid
src/devkit_driver/test/: test_trivial.py
tests/: test_imports.py
