[project]
name = "feldfreund_devkit_ros"
version = "0.1.0-dev"
description = "ROS2 nodes for the Feldfreund DevKit"
authors = [{ name="Zauberzeug GmbH", email="info@zauberzeug.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.14"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "launch.*",
    "launch_ros.*",
    "ament_index_python.*",
    "rclpy.*",
    "std_msgs.*",
    "sensor_msgs.*",
    "geometry_msgs.*",
]
ignore_missing_imports = true

[tool.pylint]
disable = [
    "C0114", # Missing module docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long (exceeds character limit)
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "B", # bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "PL", # pylint
    "RUF", # ruff
    "UP", # pyupgrade
    "W", # pycodestyle
]
fixable = [
    "I", # isort
    "RUF022", # `__all__` is not sorted
]
ignore = [
    "E501", # line too long
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# NOTE: changing default location of pytest_cache because the uvicorn file watcher somehow triggered too many reloads
cache_dir = "../.pytest_cache"
testpaths = [
    "tests"
]
