[project]
name = "feldfreund_devkit_ros"
version = "0.1.0-dev"
description = "ROS2 nodes for the Feldfreund DevKit"
authors = [{ name="Zauberzeug GmbH", email="info@zauberzeug.com" }]
readme = "README.md"
requires-python = ">=3.11, <3.14"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "launch.*",
    "launch_ros.*",
    "ament_index_python.*",
    "rclpy.*",
    "std_msgs.*",
    "sensor_msgs.*",
    "geometry_msgs.*",
    "nav_msgs.*",
    "gps_msgs.*",
    "tf2_ros.*",
    "pyquaternion",
]
ignore_missing_imports = true

[tool.pylint]
disable = [
    "C0103", # Invalid name (e.g., variable/function/class naming conventions)
    "C0111", # Missing docstring (in function/class/method)
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "C0301", # Line too long (exceeds character limit)
    "R0902", # Too many public methods
    "R0903", # Too few public methods
    "R0904", # Too many public methods
    "R0911", # Too many return statements
    "R0912", # Too many branches
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0915", # Too many statements
    "R0917", # Too many positional arguments
    "W0511", # TODO: comments
    "W0718", # Catching too general exception
]

[tool.pylint.'TYPECHECK']
ignored-modules = [
    "rclpy",
    "std_msgs",
    "sensor_msgs",
    "geometry_msgs",
    "nav_msgs",
    "launch",
    "launch_ros",
    "ament_index_python",
    "tf2_ros",
    "gps_msgs",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "B", # bugbear
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "PL", # pylint
    "RUF", # ruff
    "UP", # pyupgrade
    "W", # pycodestyle
]
fixable = [
    "I", # isort
    "RUF022", # `__all__` is not sorted
]
ignore = [
    "E501", # line too long
    "B024", # abstract base class without abstract methods
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# NOTE: changing default location of pytest_cache because the uvicorn file watcher somehow triggered too many reloads
cache_dir = "../.pytest_cache"
testpaths = [
    "tests"
]
